Quit application when focus is different (Javafx 24 change) Changes for Javafx 24