@@ -7,7 +7,7 @@
 
     <groupId>org.photoslide</groupId>
     <artifactId>PhotoSlide</artifactId>
-    <version>1.5.3-RELEASE</version>   
+    <version>1.5.4-RELEASE</version>   
 
     <!-- This description text is included in the Windows installer by default, see win-jpackage.txt -->
     <description>Photoslide is an app for managing and editing photos like Lightroom/ON1/...</description>
@@ -17,7 +17,7 @@
         <mainClass>org.photoslide.App</mainClass>
         <app.name>Photoslide</app.name>        
         <maven.build.timestamp.format>yy.ww.WWkkmm</maven.build.timestamp.format>
-        <app.version>1.5.3</app.version>        
+        <app.version>1.5.4</app.version>        
         <jvm.modules>java.base,jdk.management,java.naming,java.sql,java.transaction.xa,java.xml,jdk.unsupported,java.management,java.datatransfer,java.desktop,java.security.jgss,java.xml.crypto,jdk.javadoc,javafx.media,javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing,javafx.web,java.logging,jdk.charsets,java.se,java.net.http,java.prefs,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.localedata,java.compiler,jdk.net,java.instrument,java.scripting,java.rmi</jvm.modules>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>24</maven.compiler.source>
@@ -375,7 +375,7 @@
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--enable-native-access=ALL-UNNAMED,javafx.media,javafx.web,javafx.graphics</option>
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -388,6 +388,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
                                 <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
+                                <option>--sun-misc-unsafe-memory-access=allow</option>
                             </options>
                         </configuration>                          
                     </execution>
@@ -401,7 +402,7 @@
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--enable-native-access=ALL-UNNAMED,javafx.media,javafx.web,javafx.graphics</option>
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -414,6 +415,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
                                 <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
+                                <option>--sun-misc-unsafe-memory-access=allow</option>
                             </options>
                         </configuration>
                     </execution>
@@ -427,7 +429,7 @@
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--enable-native-access=ALL-UNNAMED,javafx.media,javafx.web,javafx.graphics</option>
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -440,6 +442,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
                                 <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
+                                <option>--sun-misc-unsafe-memory-access=allow</option>
                             </options>
                         </configuration>
                     </execution>
@@ -452,7 +455,7 @@
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
-                                <option>--add-modules java.se --enable-native-access=ALL-UNNAMED</option>                                        
+                                <option>--enable-native-access=ALL-UNNAMED,javafx.media,javafx.web,javafx.graphics</option>
                                 <option>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</option>                                        
                                 <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>                                                                                  
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                                                                                
@@ -465,6 +468,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
                                 <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
+                                <option>--sun-misc-unsafe-memory-access=allow</option>
                                 <option>${profiler.jvmargs.arg1}</option>
                                 <option>${profiler.jvmargs.arg2}</option>
                                 <option>${profiler.jvmargs.arg3}</option>
